--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,95 @@
 *{
-    margin: 0px;
-    padding: 0px;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body{
-    background: #ffffff;
+    background-image: url(../images/fondo.jpg);
+	background-position: center;
+	background-attachment: fixed;
+    background-size:cover;
+	background-repeat: repeat;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+h2{
+	text-align: center;
+	font-size: 40px;
+	font-family: arial;
+	margin-top: 80px;
+	color:  aqua;
+	text-shadow: 0px 0px 6px black;
+}
+
+.Carrusel{
+	width: 210px;
+	margin: auto;
+	perspective: 800px;
+	position: relative;
+	margin-top: 200px;
+}
+
+.contenido-del-carrusel{
+	width:100%;
+	position: absolute;
+	animation: rotar 10s infinite linear;
+	transform-style: preserve-3d;
+}
+
+.contenido-del-carrusel:hover{
+	animation-play-state: paused;
+	cursor: pointer;
+}
+
+.contenido-del-carrusel figure{
+	width: 100%;
+	height: 100px;
+	overflow: hidden;
+	position: absolute;
+	box-shadow: 0px 0px 20px 0px black;
+	transition: all 300ms;
+}
+
+.contenido-del-carrusel figure:hover{
+	box-shadow: 0px 0px 0px 0px black;
+	transition: all 300ms;
+}
+
+.contenido-del-carrusel figure:nth-child(1){
+	transform: rotateY(90deg)
+	translateZ(300px);
+}
+
+.contenido-del-carrusel figure:nth-child(2){
+	transform: rotateY(180deg)
+	translateZ(300px);
+}
+.contenido-del-carrusel figure:nth-child(3){
+	transform: rotateY(270deg)
+	translateZ(300px);
+}
+.contenido-del-carrusel figure:nth-child(4){
+	transform: rotateY(360deg)
+	translateZ(300px);
+}
+
+.contenido-del-carrusel img{
+	width: 100%;
+	transition: all 300ms;
+}
+
+.contenido-del-carrusel img:hover{
+	transform: scale(1.2);
+	transition: all 300ms;
+}
+
+@keyframes rotar{
+	from{ 
+		transform: rotateY(0deg);
+	}to{
+		transform: rotateY(360deg);
+	}
 }
 
 #container{
@@ -61,7 +145,7 @@ nav ul li{
 }
 
 aside{
-    float: left;
+    float: right;
     width: calc(20% - 20px);
     min-height: 500px;
     background: green;
