--- a/novDePC/css/articulo1.css
+++ b/novDePC/css/articulo1.css
@@ -4,7 +4,11 @@
 }
 
 body{
-    background: #ffffff;
+    background-image: url(../../images/fondo.jpg);
+	background-position: center;
+	background-attachment: fixed;
+    background-size:cover;
+	background-repeat: repeat;
     font-family: Arial, Helvetica, sans-serif;
 }
 
